# cwrap-py

./: .gitignore  README.md  clean  cwrap  install  local-dev.md  pyproject.toml  requirements.txt  setup.cfg
cwrap/: cli.py  core.py  languages.py
cwrappy/: cli.py  core.py  languages.py
src/cwrap_py/: __init__.py  cli.py  core.py  languages.py
src/cwrap_py/cli/: figlet.py  list_fonts.py  list_languages.py  main.py
src/cwrap_py/core/: figlet.py  fonts.py  languages.py
src/cwrap_pyold/: __init__.py
tests/: test_languages.py
