[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwrappy"
version = "0.1.0"
description = "A code comment header tool that uses figlet, written in python."
authors = [
    {name = "Tyler Durham", email = "tyler.durham.tn@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "click>=8.1.8",
  "markdown-it-py>=3.0.0",
  "mdurl>=0.1.2",
  "pyfiglet>=1.0.2",
  "Pygments>=2.19.1",
  "rich>=14.0.0",
  "shellingham>=1.5.4",
  "typer>=0.15.3",
  "typing_extensions>=4.13.2"
]

[project.urls]
"Homepage" = "https://github.com/TylerDurham/cwrap-python"

[project.scripts]
cwrappy = "cwrappy.cli:main"

[tool.setuptools.package-data]
cwrappy = ["cwrappy/*.py"]
