[project]
name = "cwrap-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TylerDurham", email = "TylerDurham@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.2",
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "typer>=0.15.4",
]

[project.scripts]
cwrap = "cwrap_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
