[project]
name = "cwrap-py"
version = "0.2.7"
description = "cwrap(py), written in (py)thon. Nothing more than a handy file comment header utility that helps easily me see (with my old eyes) what file I am working on."
readme = "README.md"
authors = [
    { name = "TylerDurham", email = "TylerDurham@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.2",
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "typer>=0.15.4",
]

[project.scripts]
cwrap = "cwrap_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.bumpver]
current_version = "0.2.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}'
]
"README.md" = [
    "{version}",
]

